--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,13 @@ before_script:
   - brew link zlib --force
   - mkdir bin
   - cd bin
-  - cmake ../ -DMYSQL_ADD_INCLUDE_PATH=/usr/local/include -DMYSQL_LIBRARY=/usr/local/mysql/lib/libmysqlclient_r.dylib -DREADLINE_INCLUDE_DIR=/usr/local/opt/readline/include -DREADLINE_LIBRARY=/usr/local/opt/readline/lib/libreadline.dylib -DBOOST_INCLUDEDIR=/usr/local/include -DBOOST_LIBRARYDIR=/usr/local/lib -DOPENSSL_INCLUDE_DIR=/usr/local/opt/openssl/include -DOPENSSL_SSL_LIBRARIES=/usr/local/opt/openssl/lib/libssl.dylib -DOPENSSL_CRYPTO_LIBRARIES=/usr/local/opt/openssl/lib/libcrypto.dylib -DCMAKE_INSTALL_PREFIX=. -DWITH_WARNINGS=1
+  - cmake ../ -G "Xcode" -DMYSQL_ADD_INCLUDE_PATH=/usr/local/include -DMYSQL_LIBRARY=/usr/local/mysql/lib/libmysqlclient_r.dylib -DREADLINE_INCLUDE_DIR=/usr/local/opt/readline/include -DREADLINE_LIBRARY=/usr/local/opt/readline/lib/libreadline.dylib -DBOOST_INCLUDEDIR=/usr/local/include -DBOOST_LIBRARYDIR=/usr/local/lib -DOPENSSL_INCLUDE_DIR=/usr/local/opt/openssl/include -DOPENSSL_SSL_LIBRARIES=/usr/local/opt/openssl/lib/libssl.dylib -DOPENSSL_CRYPTO_LIBRARIES=/usr/local/opt/openssl/lib/libcrypto.dylib -DCMAKE_INSTALL_PREFIX=. -DWITH_WARNINGS=1 -DTOOLS=1
   - cd ..
 
 script:
   - cd bin
-  - make -j 4 && make install
+  - xcodebuild -config Release -jobs 4
+  - xcodebuild -config Release -target install
   - cd bin
   - ./bnetserver --version
   - ./worldserver --version
